game, assets img jump fix

--- a/src/app/modules/landing/components/common-components/dropdowns/game-dropdown/game-dropdown.component.scss
+++ b/src/app/modules/landing/components/common-components/dropdowns/game-dropdown/game-dropdown.component.scss
@@ -2,7 +2,7 @@
 @import 'styles/scss/placeholders';
 
 .dropdown {
-    max-width: 300px;
+    max-width: 200px;
     width: 100%;
 
     .dropdown-toggle {
