--- a/src/app/modules/landing/pages/game-info/game-info.component.scss
+++ b/src/app/modules/landing/pages/game-info/game-info.component.scss
@@ -11,6 +11,7 @@
 
     .img-wrapper {
         max-height: 390px;
+        position: relative;
         // height: 100%;
         display: flex;
         border-radius: 4px;
@@ -20,7 +21,22 @@
             border-radius: 4px;
             min-height: 160px;
             // height: 100%;
+            border-radius: 4px;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
         }
+        // &::before {
+        //   content: '';
+        //   position: absolute;
+        //   top: 15px;
+        //   bottom: 15px;
+        //   right: 15px;
+        //   left: 15px;
+        //   border-radius: 4px;
+        //   background-color: $grey;
+        // }
     }
 }
 
